Fix  dialog double scrollbars in "product dialog"

--- a/src/app/product-dialog/product-dialog.component.scss
+++ b/src/app/product-dialog/product-dialog.component.scss
@@ -1,6 +1,7 @@
 .mat-container {
     display: flex;
     flex-direction: column;
+    height:500px;
 }
   
 
